# test_sqlitecpp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
